@@ -1,3 +1,8 @@
+2010-04-07  Jakub Jelinek  <jakub@redhat.com>
+
+	* regex.c (byte_re_match_2_internal): Avoid set but not used
+	warning.
+
 2010-03-22  Jason Merrill  <jason@redhat.com>
 
 	* cp-demangle.c (d_print_mod): Use () rather than [] for vectors.
